methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:2: error: ';' expected but '=' found.
move(nbPas:Int, bForward:Boolean):Boolean = {
                                          ^