methods.args.MethodsArgs.scala.code
move(nbPas:Int, bForward:Boolean):Boolean = {
  if(bForward) {
    for(i <- 1 to nbPas) {
      forward();
    }
  } else {
    for(i <- 1 to nbPas) {
    	backward();
		}
  }
}